# tbxforms

./: .browserslistrc  .eslintrc.js  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  .stylelintrc.js  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini  vite.config.js  webpack.config.js
.github/: CODEOWNERS
.github/workflows/: codeql.yml  test.yml
tbxforms/: __init__.py  apps.py  choices.py  fields.py  forms.py  helper.py  validators.py  widgets.py
tbxforms/layout/: __init__.py  base.py  buttons.py  constants.py  containers.py  content.py  fields.py
tbxforms/static/js/: tbxforms.js
tbxforms/static/sass/: _conditional.scss  tbxforms.scss
tbxforms/static/sass/abstracts/: _mixins.scss  _variables.scss
tbxforms/static/sass/components/: _checkboxes.scss  _conditional.scss  _error-message.scss  _error-summary.scss  _fieldset.scss  _file-upload.scss  _form-group.scss  _hint.scss  _input.scss  _label.scss  _radios.scss  _select.scss  _textarea.scss
tbxforms/static/sass/govuk/: _base.scss
tbxforms/static/sass/govuk-overrides/: _mixins.scss  _settings.scss
tbxforms/static/sass/helpers/: _clearfix.scss  _visually-hidden.scss
tbxforms/static/sass/utilities/: _clearfix.scss  _visually-hidden.scss
tbxforms/static_compiled/css/: tbxforms.css
tbxforms/static_src/sass/abstracts/: _mixins.scss
tbxforms/static_src/sass/components/: _button.scss  _conditional.scss  _date-input.scss  _field.checkbox.scss  _field.radio.scss  _field.scss  _field.select.scss  _input.scss  _textarea.scss
tbxforms/static_src/sass/utilities/: _visually-hidden.scss
tbxforms/templates/tbx/: display_form.html  errors.html  field.html  inputs.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
tbxforms/templates/tbx/layout/: baseinput.html  button.html  checkboxes.html  div.html  error_summary.html  field_errors.html  fieldset.html  help_text.html  help_text_and_errors.html  multifield.html  radios.html
tbxforms/templates/tbx/widgets/: date.html
tbxforms/templates/tbxforms/: display_form.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
tbxforms/templates/tbxforms/layout/: button.html  checkboxes.html  div.html  help_text_and_errors.html  multifield.html  radios.html
tbxforms/templates/tbxforms/widgets/: date.html
tbxforms/templatetags/: tbxforms.py
tests/: conftest.py  forms.py  settings.py  test_security.py  utils.py
tests/choices/: test_choice.py  test_choice_rendering.py
tests/fields/: test_date_input_field.py
tests/helpers/: test_form_helper.py
tests/helpers/__snapshots__/test_form_helper/: test_default_label_size.html  test_default_legend_size.html  test_error_summary_shown_by_default.html  test_override_default_label_size.html  test_override_default_legend_size.html
tests/helpers/results/: error_summary.html  label_size.html  legend_size.html  override_label_size.html
tests/layout/: test_accordion.py  test_buttons.py  test_checkbox.py  test_checkboxes.py  test_conditional_attrs.py  test_date_input.py  test_errors.py  test_escaping.py  test_field.py  test_fieldset.py  test_file_upload.py  test_radios.py  test_select.py  test_table.py  test_tabs.py  test_text_input.py  test_textarea.py
tests/layout/__snapshots__/test_buttons/: TestButtons.test_button[secondary].html  TestButtons.test_button[warning].html  TestButtons.test_css_class[secondary].html  TestButtons.test_css_class[warning].html  TestButtons.test_css_id[secondary].html  TestButtons.test_css_id[warning].html  TestButtons.test_disabled_button[secondary].html  TestButtons.test_disabled_button[warning].html  TestButtons.test_extra_attributes[secondary].html  TestButtons.test_extra_attributes[warning].html  test_css_class.html  test_css_id.html  test_disabled_button.html  test_extra_attributes.html  test_primary_button.html  test_secondary_button.html  test_warning_button.html
tests/layout/__snapshots__/test_checkbox/: test_checkbox_size.html  test_initial_attributes.html  test_no_help_text.html  test_no_help_text_errors.html  test_validation_error_attributes.html
tests/layout/__snapshots__/test_checkboxes/: test_change_legend_size.html  test_checkbox_size.html  test_choices.html  test_initial_attributes.html  test_no_help_text.html  test_no_help_text_errors.html  test_no_legend.html  test_optional_field_highlighting.html  test_required_field_highlighting.html  test_show_legend_as_heading.html  test_validation_error_attributes.html
tests/layout/__snapshots__/test_conditional_attrs/: TestConditionalFieldsToShowAsRequiredMethod.test_field_can_be_shown_as_required[checkboxes].html  TestConditionalFieldsToShowAsRequiredMethod.test_field_can_be_shown_as_required[radios].html  TestConditionalFieldsToShowAsRequiredMethod.test_field_can_be_shown_as_required[select].html  TestConditionalFieldsToShowAsRequiredMethod.test_field_can_be_shown_as_required[text].html  TestConditionalFieldsToShowAsRequiredMethod.test_field_can_be_shown_as_required[textarea].html  TestContainerConditionals.test_container_conditional_attrs[Div].html  TestContainerConditionals.test_container_conditional_attrs[Fieldset].html  TestContainerConditionals.test_container_with_multiple_values[Div].html  TestContainerConditionals.test_container_with_multiple_values[Fieldset].html  TestFieldConditionals.test_rendering[checkbox-checkbox].html  TestFieldConditionals.test_rendering[checkbox-checkboxes].html  TestFieldConditionals.test_rendering[checkbox-radios].html  TestFieldConditionals.test_rendering[checkbox-text].html  TestFieldConditionals.test_rendering[checkbox-textarea].html  TestFieldConditionals.test_rendering[checkboxes-checkbox].html  TestFieldConditionals.test_rendering[checkboxes-checkboxes].html  (+25 more)
tests/static_src/: main.scss
tests/static_src/components/: _grid.scss  _wrapper.scss
tests/templatetags/: test_links.py
tests/templatetags/results/: button_link.html
(+194 files in other folders)
