[tool.poetry]
name = "tbxforms"
version = "1.0.5"
description = "A Torchbox-flavoured template pack for django-crispy-forms, adapted from crispy-forms-gds"
authors = [
    "Kyle Bayliss <kyle.bayliss@torchbox.com>"
]
license = "BSD-2-Clause"
readme = "README.md"
homepage = ""
repository = "https://github.com/kbayliss/tbxforms/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
]
packages = [
    { include = "tbxforms" },
]
include = [
    'tbxforms/static/tbxforms/dist/bundle.js',
]
exclude = [
    'tbxforms/static/tbxforms/src/**/*',
]
keywords = [
    "crispy",
    "django",
    "django crispy forms",
    "django crispy form",
    "forms",
    "gds",
    "tbxforms",
    "wagtail",
    "wagtail forms",
    "wagtail form"
  ]

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=2.2,<4.0"
django-crispy-forms = "1.13.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.15.0"
beautifulsoup4 = "4.10.0"
coverage = "6.1.1"
pymdown-extensions = "9.0"

# Linters etc.
black = "21.7b0"
detect-secrets = "~0.13"
flake8 = "3.9.2"
isort = "5.9.3"
pylint = "2.6.0"

[tool.isort]
known_first_party = "tbxforms"
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
profile = "black"
multi_line_output = 3
force_grid_wrap = 2
lines_between_types = 1
lines_between_sections = 1
combine_star = true
line_length = 79

[tool.black]
line-length = 79

[build-system]
requires = ["poetry==1.1.7"]
build-backend = "poetry.masonry.api"
