[tool.poetry]
name = "tbxforms"
version = "2.0.0"
description = "A Torchbox-flavoured template pack for django-crispy-forms, adapted from crispy-forms-gds"
authors = [
    "Kyle Bayliss <kyle.bayliss@torchbox.com>"
]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/torchbox/tbxforms/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 2",
    "Framework :: Wagtail :: 3",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
]
packages = [
    { include = "tbxforms" },
]
include = [
    'tbxforms/static/tbxforms/dist/bundle.js',
]
exclude = [
    'tbxforms/static/tbxforms/src/**/*',
]
keywords = [
    "crispy",
    "django",
    "django crispy forms",
    "django crispy form",
    "forms",
    "gds",
    "tbxforms",
    "wagtail",
    "wagtail forms",
    "wagtail form"
  ]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"  # Cannot remove upper-bound as isort needs >=3.6.1,<4.0
Django = ">=3.2"
django-crispy-forms = ">=2.1,<3.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.15.0"
beautifulsoup4 = ">=4.8,<4.10.0"
coverage = "6.1.1"
pymdown-extensions = "9.0"
syrupy = "4.6.0"
tox =  ">=4.4,<4.5"

# Linters etc.
black = "22.3.0"  # Match version in .pre-commit-config
detect-secrets = "~0.13"
flake8 = "5.0.4"  # Match version in .pre-commit-config
isort = "5.12.0"  # Match version in .pre-commit-config
djlint = "1.23.3"

# Testing
pytest = "7.0.0"
pytest-icdiff = "0.5"

[tool.isort]
known_first_party = "tbxforms"
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
profile = "black"
multi_line_output = 3
force_grid_wrap = 2
lines_between_types = 1
lines_between_sections = 1
combine_star = true
line_length = 79

[tool.black]
line-length = 79

[tool.djlint]
extension = "html"
profile = "django"

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"
